memos/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:latest
          args:
            - '--driver'
            - 'postgres'
            - '--dsn'
            - 'postgresql://myuser:mypassword@postgres.postgres.svc.cluster.local:5432/mydatabase1?sslmode=disable'
          ports:
            - name: http
              containerPort: 5230
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
      # volumes:
      #   - name: memos-data
      #     emptyDir: {} # EmptyDir for temporary data storage (non-persistent)
