memos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: memos
spec:
  type: LoadBalancer
  selector:
    app: memos
  ports:
    - name: http
      protocol: TCP
      port: 5230
      targetPort: 5230
